module-system/sov-modules-macros/tests/rpc/derive_rpc_working_set_no_generic.stderr
error: The `working_set` argument to the `#[rpc_method]`-annotated function has the wrong type. It should be a mutable reference to a `WorkingSet<...>`. Either fix the type or remove the `working_set` argument.
  --> tests/rpc/derive_rpc_working_set_no_generic.rs:16:9
   |
16 |       pub fn foo(
   |  _________^
17 | |         &self,
18 | |         _working_set: &mut sov_modules_api::WorkingSet,
19 | |     ) -> jsonrpsee::core::RpcResult<u32> {
   | |________________________________________^
